feat: traverse superclasses during reflective examination